<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/divider_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.RecipeStepDetailActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_ingredient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>